nobase_include_HEADERS = nxweb/config.h \
	nxweb/nxweb_config.h nxweb/http_server.h nxweb/misc.h nxweb/nx_alloc.h \
	nxweb/nx_buffer.h nxweb/nxd.h nxweb/nx_event.h nxweb/nx_file_reader.h \
	nxweb/nx_pool.h nxweb/nx_queue_tpl.h \
	nxweb/nxweb.h nxweb/nx_workers.h \
	nxweb/templates.h nxweb/nxjson.h \
	nxweb/deps/ulib/alignhash_tpl.h nxweb/deps/ulib/common.h nxweb/deps/ulib/hash.h \
	nxweb/deps/sha1-c/sha1.h
